# control

./: .env.example  .gitignore  .mise.toml  .tarpaulin.toml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.integration  MANIFEST.md  Makefile  README.md  SECURITY.md  codecov.yml  config.integration.yaml  config.production.yaml  config.yaml  deny.toml  docker-compose.yml  justfile  openapi.yaml  prometheus.yml  release-please-config.json
.config/: nextest.toml
.githooks/: post-checkout  post-merge
.github/: FUNDING.yml  dependabot.yml  labeler.yml
.github/workflows/: canary.yml  ci.yml  cleanup.yml  codeql.yml  container.yml  labeler.yml  nightly.yml  release.yml  security.yml
.serena/: project.yml
.serena/memories/: codebase_structure.md  project_overview.md  style_and_conventions.md  suggested_commands.md  (+1 more)
crates/api/: Cargo.toml
crates/api/src/: audit.rs  extract.rs  lib.rs  pagination.rs  routes.rs
crates/api/src/handlers/: audit_logs.rs  auth.rs  auth_v2.rs  cli_auth.rs  clients.rs  common.rs  email_auth.rs  emails.rs  health.rs  metrics.rs  mfa_auth.rs  mod.rs  organizations.rs  schemas.rs  sessions.rs  state.rs  teams.rs  tokens.rs  users.rs  vaults.rs
crates/api/src/middleware/: jwt.rs  jwt_local.rs  logging.rs  mod.rs  organization.rs  permission.rs  ratelimit.rs  request_id.rs  security_headers.rs  session.rs  vault.rs
crates/api/tests/: audit_log_tests.rs  auth_tests.rs  cascade_deletion_tests.rs  cli_auth_tests.rs  client_tests.rs  edge_case_tests.rs  email_tests.rs  engine_internal_tests.rs  handler_tests.rs  health_tests.rs  integration_tests.rs  jwks_verify_test.rs  middleware_tests.rs  organization_invitation_tests.rs  organization_member_tests.rs  organization_suspend_tests.rs  organization_tests.rs  ratelimit_tests.rs  schema_tests.rs  security_authorization_tests.rs  security_input_validation_tests.rs  security_isolation_tests.rs  session_limit_tests.rs  session_tests.rs  team_tests.rs  tier_limit_tests.rs  token_tests.rs  vault_tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/control/: Cargo.toml
crates/control/src/: main.rs
crates/inferadb-control-api/: Cargo.toml
crates/inferadb-control-api/src/: audit.rs  lib.rs  routes.rs
crates/inferadb-control-api/src/handlers/: audit_logs.rs  auth.rs  cli_auth.rs  clients.rs  emails.rs  health.rs  jwks.rs  metrics.rs  mod.rs  organizations.rs  schemas.rs  sessions.rs  teams.rs  tokens.rs  users.rs  vaults.rs
crates/inferadb-control-api/src/middleware/: dual_auth.rs  engine_auth.rs  logging.rs  mod.rs  organization.rs  permission.rs  ratelimit.rs  server_auth.rs  session.rs  vault.rs
crates/inferadb-control-api/tests/: audit_log_tests.rs  client_tests.rs  edge_case_tests.rs  jwks_verify_test.rs  organization_invitation_tests.rs  organization_member_tests.rs  organization_tests.rs  schema_tests.rs  security_authorization_tests.rs  security_input_validation_tests.rs  security_isolation_tests.rs  team_tests.rs  token_tests.rs  vault_tests.rs
crates/inferadb-control-config/: Cargo.toml
crates/inferadb-control-config/src/: lib.rs  refresh.rs
crates/inferadb-control-const/: Cargo.toml
crates/inferadb-control-const/src/: lib.rs  limits.rs
crates/inferadb-control-core/: Cargo.toml
crates/inferadb-control-core/src/: clock.rs  config.rs  config_refresh.rs  crypto.rs  fdb_invalidation.rs  fdb_jwks.rs  id.rs  jobs.rs  jwt.rs  leader.rs  lib.rs  logging.rs  metrics.rs  ratelimit.rs  repository_context.rs  startup.rs  webhook_client.rs
crates/inferadb-control-core/src/auth/: password.rs
crates/inferadb-control-core/src/email/: service.rs
crates/inferadb-control-core/src/repository/: audit_log.rs  authorization_code.rs  client.rs  client_certificate.rs  jti_replay_protection.rs  mod.rs  organization.rs  organization_invitation.rs  passkey_credential.rs  team.rs  user.rs  user_email.rs  user_email_verification_token.rs  user_password_reset_token.rs  user_session.rs  vault.rs  vault_refresh_token.rs  vault_schema.rs
crates/inferadb-control-storage/: Cargo.toml
crates/inferadb-control-storage/src/: backend.rs  coordination.rs  factory.rs  fdb.rs  lib.rs  memory.rs  metrics.rs  optimization.rs
crates/inferadb-control-storage/tests/: fdb_integration_tests.rs  ledger_integration_tests.rs
crates/inferadb-control-test-fixtures/: Cargo.toml
crates/inferadb-control-test-fixtures/src/: lib.rs
crates/inferadb-management-grpc/: Cargo.toml
crates/inferadb-management-grpc/src/: client.rs
crates/inferadb-management-test-fixtures/: Cargo.toml
crates/inferadb-management-test-fixtures/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: backend.rs  buffered.rs  coordination.rs  factory.rs  lib.rs  memory.rs  metrics.rs  optimization.rs
crates/storage/tests/: ledger_integration_tests.rs
crates/test-fixtures/: Cargo.toml
crates/test-fixtures/src/: lib.rs
crates/test-integration/: Cargo.toml
crates/test-integration/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: error.rs  id.rs  identity.rs  lib.rs
crates/types/src/dto/: audit_logs.rs  auth.rs  clients.rs  emails.rs  mod.rs  organizations.rs  schemas.rs  sessions.rs  teams.rs  tokens.rs  users.rs  vaults.rs
crates/types/src/entities/: audit_log.rs  authorization_code.rs  client.rs  mod.rs  organization.rs  organization_invitation.rs  passkey_credential.rs  secure_token.rs  team.rs  user.rs  user_email.rs  user_email_verification_token.rs  user_password_reset_token.rs  user_session.rs  vault.rs  vault_refresh_token.rs  vault_schema.rs
docs/: Architecture.md  AuditLogs.md  Authentication.md  Deployment.md  Examples.md  GettingStarted.md  Pagination.md  Performance.md  README.md  Troubleshooting.md  architecture.md  audit-logs.md  authentication.md  deployment.md  examples.md  flows.md  getting-started.md  overview.md  pagination.md  performance.md  troubleshooting.md
helm/: Chart.yaml  README.md  values.yaml
k8s/: rbac.yaml  tailscale-sidecar.yaml
loadtests/: README.md
scripts/: coverage.sh  update-dependencies.sh
(+272 files in other folders)
