[workspace]
members = [
  "crates/api",
  "crates/control",
  "crates/config",
  "crates/const",
  "crates/core",
  "crates/storage",
  "crates/test-fixtures",
  "crates/types",
]
resolver = "2"

[workspace.package]
authors = ["InferaDB Project"]
edition = "2024"
homepage = "https://inferadb.com"
license = "MIT OR Apache-2.0"
publish = false
repository = "https://github.com/inferadb/inferadb"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
# Core async runtime
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

# Builder pattern
bon = "3"

# Error handling
anyhow = "1"
snafu = "0.8"

# System
num_cpus = "1"

# Serialization
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Tracing and observability
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Web frameworks
axum = { version = "0.8", features = ["macros", "tokio"] }
axum-extra = { version = "0.12", features = ["cookie", "cookie-private"] }
tonic = "0.14"
tonic-build = "0.14"
tower = "0.5"
tower-http = { version = "0.6", features = [
  "compression-full",
  "cors",
  "trace",
] }

# Configuration
clap = { version = "4", features = ["derive", "env"] }
config = "0.15"

# Concurrency
parking_lot = "0.12"

# Random number generation
rand = "0.10"

# Authentication & Cryptography
aes-gcm = "0.10"
argon2 = { version = "0.5", features = ["std"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize", "pkcs8"] }
hex = "0.4"
jsonwebtoken = { version = "10", default-features = false, features = [
  "aws_lc_rs",
  "ed25519-dalek",
  "use_pem",
] }
pem = "3"
secrecy = "0.10"
sha2 = "0.10"
uuid = { version = "1.0", features = ["serde", "v4"] }
zeroize = { version = "1", features = ["derive"] }

# WebAuthn/Passkey support
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }

# Enum derive macros
strum = { version = "0.27", features = ["derive"] }

# Snowflake ID generation
idgenerator = "2"

# Testing
proptest = "1"

# Email
lettre = { version = "0.11", default-features = false, features = [
  "builder",
  "smtp-transport",
  "tokio1-rustls-tls",
] }

# HTTP client for external services
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }

# Cookie handling
cookie = "0.18"
tower-cookies = "0.10"

# Time handling
time = { version = "0.3", features = ["formatting", "macros"] }

# Regular expressions
regex = "1"

# URL parsing
url = "2"

# Terminal utilities
terminal_size = "0.4"
unicode-width = "0.2"

# Validation
validator = { version = "0.20", features = ["derive"] }

# Kubernetes client
k8s-openapi = { version = "0.27", features = ["v1_31"] }
kube = { version = "3", features = ["client"] }

# Caching
moka = { version = "0.12", features = ["sync"] }

# NTP client
rsntp = { version = "4", default-features = false, features = ["chrono", "async"] }

# TLS (for crypto provider initialization)
rustls = { version = "0.23", default-features = false, features = [
  "aws_lc_rs",
] }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = 3
strip = true

[profile.bench]
inherits = "release"
