[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-api"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-config = { path = "../config" }
inferadb-control-const = { path = "../const" }
inferadb-control-core = { path = "../core" }
inferadb-control-storage = { path = "../storage" }
inferadb-control-types = { path = "../types" }
# Internal (uses latest from crates.io; consider using .cargo/config.toml override for local development)
inferadb-common-storage = ">=0.1.0-0"

# External dependencies
anyhow = { workspace = true }
bon = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
pem = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
inferadb-control-test-fixtures = { path = "../test-fixtures" }
inferadb-common-authn = ">=0.1.0-0"
proptest = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true

[features]
default = []
