[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-config"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Builder pattern
bon = { workspace = true }

# Configuration loading
config = { workspace = true }
num_cpus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }

# Error types from types crate
inferadb-control-types = { path = "../types" }

[dev-dependencies]
serde_yaml = { workspace = true }

[lints]
workspace = true
