[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-config"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Builder pattern
bon = { workspace = true }

# CLI argument parsing with env var support
clap = { workspace = true }

# Serialization
serde = { workspace = true }

# Enum derive macros (Display, EnumString)
strum = { workspace = true }

# Logging
tracing = { workspace = true }

# Error types from types crate
inferadb-control-types = { path = "../types" }

[lints]
workspace = true
