[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "inferadb-control"
path = "src/main.rs"

[dependencies]
# Workspace crates
inferadb-control-api = { path = "../api" }
inferadb-control-config = { path = "../config" }
inferadb-control-core = { path = "../core" }
inferadb-control-storage = { path = "../storage" }
inferadb-control-types = { path = "../types" }

# External dependencies (anyhow at application level, snafu in libraries)
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true

[features]
default = []
