[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-api"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-const = { path = "../inferadb-control-const" }
inferadb-control-core = { path = "../inferadb-control-core" }
inferadb-control-engine-client = { path = "../inferadb-control-engine-client" }
inferadb-control-storage = { path = "../inferadb-control-storage" }
inferadb-control-types = { path = "../inferadb-control-types" }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = "1.20"
pem = "3.0"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1.11", features = ["serde", "v4"] }

[dev-dependencies]
inferadb-control-test-fixtures = { path = "../inferadb-control-test-fixtures" }

[features]
default = []
fdb = ["inferadb-control-core/fdb"]
