[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-api"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-const = { path = "../inferadb-control-const" }
inferadb-control-core = { path = "../inferadb-control-core" }
inferadb-control-storage = { path = "../inferadb-control-storage" }
inferadb-control-types = { path = "../inferadb-control-types" }
inferadb-storage = { path = "../../../common/crates/inferadb-storage" }

# External dependencies
anyhow = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
pem = "3.0"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
inferadb-control-test-fixtures = { path = "../inferadb-control-test-fixtures" }
inferadb-engine-auth = { path = "../../../engine/crates/inferadb-engine-auth" }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = []
