[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-config"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Configuration loading
config = { workspace = true }
num_cpus = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Dynamic config refresh
notify = "8.2.0"
parking_lot = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

# Error types from types crate
inferadb-control-types = { path = "../inferadb-control-types" }

[dev-dependencies]
tempfile = "3.14"
tokio = { workspace = true, features = ["test-util"] }
