[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-const"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# Zero dependencies - pure constants crate
[dependencies]
