[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-storage"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
inferadb-storage = { path = "../../../common/crates/inferadb-storage" }
inferadb-storage-ledger = { path = "../../../common/crates/inferadb-storage-ledger" }

# External dependencies
bon = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []

[[test]]
name = "ledger_integration_tests"
path = "tests/ledger_integration_tests.rs"
