[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-storage"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Internal (uses latest from crates.io; consider using .cargo/config.toml override for local development)
inferadb-common-storage = ">=0.1.0-0"
inferadb-common-storage-ledger = ">=0.1.0-0"

# External dependencies
async-trait = { workspace = true }
bon = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
inferadb-ledger-sdk = ">=0.1.0-0"
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

[features]
default = []
integration = []

[lints]
workspace = true

[[test]]
name = "ledger_integration_tests"
path = "tests/ledger_integration_tests.rs"
required-features = ["integration"]
