[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-test-fixtures"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-api = { path = "../api" }
inferadb-control-core = { path = "../core" }
inferadb-control-storage = { path = "../storage" }
inferadb-control-types = { path = "../types" }

# External dependencies
anyhow = { workspace = true }
bon = { workspace = true }
axum = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
