[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-test-fixtures"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-api = { path = "../api" }
inferadb-control-const = { path = "../const" }

# External dependencies
axum = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
