[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-test-integration"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace crates
inferadb-control-api = { path = "../api" }
inferadb-control-config = { path = "../config" }
inferadb-control-const = { path = "../const" }
inferadb-control-core = { path = "../core" }
inferadb-control-types = { path = "../types" }

# Ledger SDK (with mock server support)
inferadb-ledger-sdk = { version = ">=0.1.0-0", features = ["serde"] }
inferadb-ledger-types = ">=0.1.0-0"

# External dependencies
axum = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

[lints]
workspace = true
