[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "inferadb-control-types"
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Internal
inferadb-common-storage = ">=0.1.0-0"
inferadb-ledger-types = ">=0.1.0-0"

# Core dependencies
bon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }

# Snowflake ID generation
idgenerator = { workspace = true }

[lints]
workspace = true
